--- a/MEAN/frontend/package.json
+++ b/MEAN/frontend/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
+    "ngx-cookie-service": "^10.1.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
