Backend Update code is Done

--- a/MEAN/backend/.env
+++ b/MEAN/backend/.env
@@ -2,4 +2,4 @@ DB_CONNECT = mongodb://localhost:27017/mydb
 
 TOKEN_SECRET = satishumagolisgoodby
 
-JWT_EXPIRES_IN = 100000
+JWT_EXPIRES_IN = 558963258415
