--- a/MEVN/backend/package.json
+++ b/MEVN/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
+    "multer": "^1.4.2",
     "njwt": "^1.0.0",
     "nodemon": "^2.0.6"
   }
