--- a/MEVN/frontend/package.json
+++ b/MEVN/frontend/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
@@ -19,8 +18,8 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.5.2",
     "eslint": "^6.7.2",
